--- a/asurion-aspen-pkg/package.json
+++ b/asurion-aspen-pkg/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "@mpreyes/asurion-aspen-pkg",
-  "version": "1.0.0",
-  "description": "",
-  "repository": "https://github.com/mpreyes/danny-and-the-gworls-myasurion-hackathon-2022",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"name": "@mpreyes/asurion-aspen-pkg",
+	"version": "1.0.0",
+	"description": "",
+	"repository": "https://github.com/mpreyes/danny-and-the-gworls-myasurion-hackathon-2022",
+	"main": "scripty.ts",
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {},
+	"devDependencies": {
+		"@types/node": "^18.11.9",
+		"typescript": "^4.8.4"
+	}
 }
