--- a/asurion-aspen-pkg/package.json
+++ b/asurion-aspen-pkg/package.json
@@ -1,13 +1,15 @@
 {
 	"name": "@mpreyes/asurion-aspen-pkg",
-	"version": "1.0.0",
+	"version": "1.0.2",
 	"description": "",
 	"repository": "https://github.com/mpreyes/danny-and-the-gworls-myasurion-hackathon-2022",
 	"main": "scripty.ts",
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"dependencies": {},
+	"dependencies": {
+		"axios": "^1.1.3"
+	},
 	"devDependencies": {
 		"@types/node": "^18.11.9",
 		"typescript": "^4.8.4"
