--- a/asurion-aspen-pkg/.npmrc
+++ b/asurion-aspen-pkg/.npmrc
@@ -1,2 +1,4 @@
-@mpreyes:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/mpreyes:_authToken=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
+# @mpreyes:registry=https://npm.pkg.github.com
+# //npm.pkg.github.com/:_authToken=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
+
+ @mpreyes:registry=https://registry.npmjs.org/
